--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,6 +173,16 @@ jobs:
       - create-sdist
       - upload-pypi
 
+  sdist-test-deploy:
+    docker:
+      - image: "circleci/python:3.6"
+    steps:
+      - checkout
+      - bootstrap-linux
+      - install-python-deps
+      - create-sdist
+      - upload-testpypi
+
   wheels-manylinux-deploy:
     docker:
       - image: "circleci/python:3.6"
@@ -275,8 +285,8 @@ workflows:
 
   linux-test-deploy:
     jobs:
-      - sdist-deploy:
-          name: Create and deploy sdist
+      - sdist-test-deploy:
+          name: Create and deploy test sdist
           filters:
             tags:
               only: /(.)*[0-9]+(\.[0-9]+)*(-beta)*/
