--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -295,7 +295,7 @@ workflows:
       - wheels-manylinux-test-deploy:
           name: Create and deploy linux test wheels
           requires:
-            - Create and deploy sdist
+            - Create and deploy test sdist
           filters:
             tags:
               only: /(.)*[0-9]+(\.[0-9]+)*(-beta)*/
