trying to print the content of /etc/yum.repos.d/CentOS-Base.repo to the circleCI console

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,6 +105,7 @@ commands:
       - run:
           name: Create wheel
           command: |
+            cat /etc/yum.repos.d/CentOS-Base.repo
             python3 -m pip install cibuildwheel==1.6.0
             python3 -m cibuildwheel --output-dir dist
 
@@ -188,7 +189,7 @@ jobs:
       - image: "circleci/python:3.6"
     environment:
       - CIBW_BUILD: "cp36-manylinux_x86_64 cp37-manylinux_x86_64 cp38-manylinux_x86_64 cp39-manylinux_x86_64"
-      - CIBW_BEFORE_ALL: "cat /etc/yum.repos.d/CentOS-Base.repo && yum install -y gcc ninja-build"
+      - CIBW_BEFORE_ALL: "yum install -y gcc ninja-build"
       - CIBW_BEFORE_BUILD: "pip install cmake setuptools-scm -r requirements.txt && pip install -r requirements-dev.txt"
     steps:
       - checkout
@@ -289,7 +290,7 @@ workflows:
           name: Create and deploy test sdist
           filters:
             tags:
-              only: /(.)*[0-9]+(\.[0-9]+)*(-beta)*/
+              only: /(.)*[0-9]+(\.[0-9]+)*(-beta)/
             branches:
               ignore: /.*/
       - wheels-manylinux-test-deploy:
@@ -298,7 +299,7 @@ workflows:
             - Create and deploy test sdist
           filters:
             tags:
-              only: /(.)*[0-9]+(\.[0-9]+)*(-beta)*/
+              only: /(.)*[0-9]+(\.[0-9]+)*(-beta)/
             branches:
               ignore: /.*/
 
