--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,8 +187,7 @@ jobs:
     docker:
       - image: "circleci/python:3.6"
     environment:
-      - CIBW_BUILD: "cp36-manylinux_x86_64 cp37-manylinux_x86_64 cp38-manylinux_x86_64"
-      - CIBW_BEFORE_ALL: "yum install -y gcc ninja-build"
+      - CIBW_BUILD: "cp36-manylinux_x86_64 cp37-manylinux_x86_64 cp38-manylinux_x86_64 cp39-manylinux_x86_64"
       - CIBW_BEFORE_BUILD: "pip install cmake setuptools-scm -r requirements.txt && pip install -r requirements-dev.txt"
     steps:
       - checkout
@@ -200,8 +199,7 @@ jobs:
     docker:
       - image: "circleci/python:3.6"
     environment:
-      - CIBW_BUILD: "cp36-manylinux_x86_64 cp37-manylinux_x86_64 cp38-manylinux_x86_64"
-      # - CIBW_BEFORE_ALL: "yum install -y gcc ninja-build"
+      - CIBW_BUILD: "cp36-manylinux_x86_64 cp37-manylinux_x86_64 cp38-manylinux_x86_64 cp39-manylinux_x86_64"
       - CIBW_BEFORE_BUILD: "pip install cmake setuptools-scm -r requirements.txt && pip install -r requirements-dev.txt"
     steps:
       - checkout
